@@ -13,10 +13,10 @@ export(glmboost,
        mboost,
        boost_control, mstop, Family,
        GaussReg, Gaussian, GaussClass, Laplace, Binomial, Poisson, QuantReg,
-       ExpectReg, NBinomial, PropOdds, Weibull, Loglog, Lognormal, mboost_fit,
+       ExpectReg, NBinomial, PropOdds, Weibull, Loglog, Lognormal, AUC, mboost_fit,
        Huber, AdaExp, CoxPH, FP, IPCweights, cvrisk, cv, bbs, stabsel,
-       bols, bspatial, brandom, btree, survFit, selected, nuisance, "%+%",
-       "%X%")
+       bols, bspatial, brandom, btree, brad, bmono, survFit, selected, nuisance,
+       "%+%", "%X%")
        ###, basesel, fitsel)
 exportClasses("boost_family")
 exportMethods("show")
